@@ -159,6 +159,18 @@ public final class DisjunctionMaxQuery extends Query implements Iterable<Query> 
           }
 
           @Override
+          public BulkScorer bulkScorer() throws IOException {
+            if (tieBreakerMultiplier == 0f) {
+              List<BulkScorer> scorers = new ArrayList<>();
+              for (ScorerSupplier ss : scorerSuppliers) {
+                scorers.add(ss.bulkScorer());
+              }
+              return new DisjunctionMaxBulkScorer(scorers);
+            }
+            return super.bulkScorer();
+          }
+
+          @Override
           public long cost() {
             if (cost == -1) {
               long cost = 0;
