@@ -1,0 +1,48 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.lucene.search;
+
+import java.io.IOException;
+
+/** Simplest implementation of {@link Scorable}, implemented via simple getters and setters. */
+final class SimpleScorable extends Scorable {
+  float score;
+  float minCompetitiveScore;
+
+  /** Sole constructor. */
+  public SimpleScorable() {}
+
+  @Override
+  public float score() {
+    return score;
+  }
+
+  /** Set the score. */
+  public void setScore(float score) {
+    this.score = score;
+  }
+
+  /** Get the min competitive score. */
+  public float minCompetitiveScore() {
+    return minCompetitiveScore;
+  }
+
+  @Override
+  public void setMinCompetitiveScore(float minScore) throws IOException {
+    minCompetitiveScore = minScore;
+  }
+}
